[gd_scene load_steps=4 format=3 uid="uid://cexkfynl6w4jd"]

[ext_resource type="Script" path="res://scripts/cards_base.gd" id="1_8sddd"]
[ext_resource type="Texture2D" uid="uid://c72i7an1yu7fj" path="res://Card RPG UI&Charactors/card_back.jpg" id="2_bvh3r"]
[ext_resource type="Texture2D" uid="uid://ca7nks8rqks1s" path="res://Card RPG UI&Charactors/card.jpg" id="3_u84vv"]

[node name="CardUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_8sddd")

[node name="Backface" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_bvh3r")
metadata/_edit_lock_ = true

[node name="Frontface" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 685.0
offset_bottom = 994.0
texture = ExtResource("3_u84vv")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="CostLabel" type="Label" parent="Frontface"]
layout_mode = 0
offset_left = 8.0
offset_top = 38.0
offset_right = 159.0
offset_bottom = 170.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 76
text = "cost"
metadata/_edit_lock_ = true

[node name="PowerLabel" type="Label" parent="Frontface"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.097
anchor_bottom = 0.075
offset_left = 429.0
offset_top = 828.0
offset_right = 619.555
offset_bottom = 911.45
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 81
text = "power"

[node name="NameLabel" type="Label" parent="Frontface"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.291
anchor_bottom = 0.323
offset_left = 30.0
offset_top = 378.0
offset_right = 442.665
offset_bottom = 271.938
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 201
text = "NAME"
